--- a/research.Rmd
+++ b/research.Rmd
@@ -18,10 +18,18 @@ output:
 </div>
 
 <div class = col-md-8>
-Recent focus on migratory bird declines have led to increased interest in how birds move and use habitat throughout their full annual cycle. The [EWMRC](www.woodcockmigration.org) has been examining migratory bird movement ecology and habitat selection using migratory data from >500 GPS-tagged American Woodcock. While this work is in progress, one of our early products is the Woodcock Priority Area Siting Tool ([W-PAST](https://woodcock.shinyapps.io/W-PAST); see our summary on the [applications page](applications.html)).
+Recent focus on migratory bird declines have led to increased interest in how birds move and use habitat throughout their full annual cycle. The [EWMRC](www.woodcockmigration.org) has been examining migratory bird movement ecology and habitat selection using migratory data from >500 GPS-tagged American Woodcock. One of our early management-oriented products is the Woodcock Priority Area Siting Tool ([W-PAST](https://woodcock.shinyapps.io/W-PAST); see our summary on the [applications page](applications.html)).
 <br>
 <br>
-Some of our early insights are that woodcock have a tendency to make notable movements outside of the migratory season. Woodcock frequently make extended movements in the wintering and breeding seasons, either as exploratory loops or one-way dispersal events, and occasionally even initiate southerly migration during the late breeding season (June - August). Woodcock also exhibit partial migration at southern and mid-Atlantic latitudes, and make movements resembling facultative migration along the mid-Atlantic coast.
+During this project we’ve developed a process for classifying GPS data collected during bird migration, which uses a modified step-length threshold with a hidden Markov model to estimate the migratory state of a woodcock at any point of its full annual cycle. As this technique can be used to estimate the migratory state of a bird during a mortality event, we’ll be able to integrate these classifications into an upcoming paper which examines woodcock survival in respect to migration. We’ve also used woodcock as a model for understanding how functional responses impact the habitat use of migratory birds throughout the year, and as an example of a low-altitude flier when examining how airspace obstacles overlap with migratory flight altitudes.
+
+*Publications:*
+
+Clements, S. J., **L. A. Berigan**, A. C. Fish, R. L. Darling, A. M. Roth, G. Balkcom, ... and E. J. Blomberg (2024). Satellite tracking of American Woodcock reveals a gradient of migration strategies. Ornithology 141:ukae008. [PDF](files/Clements_strategies_2024.pdf)
+
+Fish, A. C., A. M. Roth, G. Balkcom, **L. A. Berigan**, K. L. Darling, S. J. Clements, ... and E. J. Blomberg (2024). American woodcock migration phenology in eastern North America: implications for hunting season timing. Journal of Wildlife Management e22565. [PDF](files/Fish_phenology_2024.pdf)
+
+Blomberg E. J., A. C. Fish, **L. A. Berigan**, A. M. Roth, R. Rau, S. J. Clements, ... and  L. Williams (2023). The American woodcock singing ground survey largely conforms to the phenology of male woodcock migration. Journal of Wildlife Management 87(8):e22488. [PDF](files/Blomberg_SGS_2023.pdf)
 
 *Popular science presentations:* [Harris Center](https://www.youtube.com/watch?v=ivrPYA-CgBI&ab_channel=HarrisCenter), [Friends of Mississquoi NWR](https://www.youtube.com/watch?v=PAqzFuZ15Mo&ab_channel=FriendsofMissisquoi)
 
@@ -35,12 +43,19 @@ Some of our early insights are that woodcock have a tendency to make notable mov
 Lesser prairie-chickens have recently been listed under the U.S. Endangered Species Act due to widespread declines throughout most of their range. To combat these declines, a collaborative federal, state, and university effort translocated 411 lesser prairie-chickens to unoccupied areas of presumed habitat in the Sand Sagebrush Prairie Ecoregion. During the translocation, we conducted an assessment of lesser prairie-chicken habitat requirements in areas where birds were released (especially the [Cimarron](https://www.fs.usda.gov/recarea/psicc/recarea/?recid=12404) and [Comanche](https://www.fs.usda.gov/detail/psicc/about-forest/districts/?cid=fsm9_032695) National Grasslands) and found that areas of Sand Sagebrush prairie which had formerly hosted lesser prairie-chickens no longer contained sufficient nesting habitat for their persistence.
 <br>
 <br>
-We also found that lesser prairie-chicken dispersal after translocation was almost universal, and resulted in the diffusion of the translocated population across an area totalling nearly 4,000 square kilometers (~1.25x the size of Rhode Island). We're currently working to publish our results to ensure that the role of translocation is carefully evaluated before it is used in the restoration of this iconic prairie species.
+We also found that lesser prairie-chicken dispersal after translocation was almost universal, and resulted in the diffusion of the translocated population across an area totalling nearly 4,000 square kilometers (~1.25x the size of Rhode Island). Our paper describing this dispersal, published in Ecology and Evolution in 2024, advises that practitioners carefully evaluate the role of translocation before they use it for the restoration of this iconic prairie species.
 <br>
 <br>
-**Berigan, L. A.**, Aulicky, C. S., Teige, E. C., Sullins, D. S., Haukos, D. A., Fricke, K. A., ... & Ricketts, A. M. (2022). Availability of lesser prairie‐chicken nesting habitat impairs restoration success. Wildlife Society Bulletin, 46(5), e1379. [PDF](files/Berigan_LPCHabitat_2022.pdf)
 
-**Berigan, L. A.** (2019). Dispersal, reproductive success, and habitat use by translocated lesser prairie-chickens (Master's thesis). [PDF](files/Berigan_MastersThesis.pdf)
+*Publications:*
+
+**Berigan, L. A.**, C. S. Aulicky, E. C. Teige, D. S. Sullins,  K. A. Fricke, J. H. Reitz, ... and D. A. Haukos (2024). Lesser prairie-chicken dispersal after translocation: Implications for restoration and population connectivity. Ecology and Evolution 14(2):e10871. [PDF](files/Berigan_LPCDispersal_2024.pdf)
+
+Teige, E. C., **L. A. Berigan**, C. S. Aulicky, J. H. Reitz, D. A. Haukos, D. S. Sullins, ... and L. G. Rossi. Assessment of lesser prairie‐chicken translocation through survival and lek surveys. Wildlife Society Bulletin 47(4):e1493. [PDF](files/Teige_survival_2023.pdf)
+
+**Berigan, L. A.**, C. S. Aulicky, E. C. Teige, D. S. Sullins, D. A. Haukos, K. A. Fricke, ... and A. M. Ricketts (2022). Availability of lesser prairie‐chicken nesting habitat impairs restoration success. Wildlife Society Bulletin 46(5):e1379. [PDF](files/Berigan_LPCHabitat_2022.pdf)
+
+**Berigan, L. A.** (2019). Dispersal, reproductive success, and habitat use by translocated lesser prairie-chickens. Master's thesis, Kansas State University. [PDF](files/Berigan_MastersThesis.pdf)
 
 *Use in listing decisions:* [Federal Register 87(226), page 72739](files/Federal_Register_2022_listing.pdf)
 
@@ -65,7 +80,10 @@ We also found that lesser prairie-chicken dispersal after translocation was almo
 [Nearly 3 billion birds](https://www.birds.cornell.edu/home/bring-birds-back/) have disappeared from North America since 1970, in large part due to massive declines in abundance among common bird species. Our team used citizen science data collected by [Project Feederwatch](https://feederwatch.org/) to measure trends in House Sparrow abundance and evaluate potential reasons for their disappearance. We found that House Sparrow declines were closely linked to highly-urbanized landscapes, and did not appear to be related to the resurgence in *Accipiter* hawk populations that contributed to declines in Europe. The cause of House Sparrow declines in North America is likely tightly linked to urban landscapes, and may include the modification of urban greenspaces or feral cat populations. Our results were published in the Wilson Journal of Ornithology in 2020.
 <br>
 <br>
-**Berigan, L. A.**, Greig, E. I., & Bonter, D. N. (2020). Urban House Sparrow (*Passer domesticus*) populations decline in North America. The Wilson Journal of Ornithology, 132(2), 248-258. [PDF](files/Berigan_HouseSparrow_2020.pdf)
+
+*Publication:*
+
+**Berigan, L. A.**, E. I. Greig, and D. N. Bonter (2020). Urban House Sparrow (*Passer domesticus*) populations decline in North America. The Wilson Journal of Ornithology 132(2):248-258. [PDF](files/Berigan_HouseSparrow_2020.pdf)
 
 *Media:* [ScienceDaily](https://www.sciencedaily.com/releases/2021/02/210211114002.htm), [New York Almanac](https://www.newyorkalmanack.com/2021/02/even-the-common-house-sparrow-is-in-decline-study-finds/), [Grand Forks Herald](https://www.grandforksherald.com/sports/northland-outdoors/always-in-season-mike-jacobs-house-sparrow-numbers-continue-long-term-decline)
 </div>
