--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -8,41 +8,44 @@ output:
       smooth_scroll: true
 ---
 <hr />
-## Quantitative skills
+## Courses taught
+I specialize in teaching quantitative methods and statistics from an ecological perspective, including topics such as regression, mark-recapture, and population dynamics. However, some of my past teaching experiences have also included introductory biology and field-based taxonomic courses. While my approach might vary between different types of courses, the following overview is an example of how I might apply some common strategies to a scenario I'm familiar with: teaching population dynamics to undergraduates.
+
 <br>
-<div class = row>
-<div class = col-md-4>
+
+<hr />
+
+## Teaching quantitative skills
+
+I've taught stats-based courses primarily through a lecture/lab hybrid format, where students receive a common introduction to concepts before breaking out into groups or working individually through a lab assignment. While teaching lab courses, I adopt the following strategies:
+<br>
+
+1. **Multimodal presentation of content**: Equations are an essential part of any quantitative course, but they can be a stumbling block for many students. I work to improve student comprehension of mathematical notation by presenting it side-by-side with alternative explanations, usually using both text and illustrations. I also make a point to define every variable, every time, making as few assumptions as I can about what the student does/does not recall. For example, my course material might include the following description of an exponential growth model:
+
+
+<div style="background-color: #F6F6F6; border-radius: 10px; padding: 20px;">
+
 <center>
-![<br><font size = "2" color = "grey">*An American Woodcock forages in a swamp during an early spring snowfall*</font>](images/woodcock_circle2.png)
+**Exponential growth of a population**
 </center>
-</div>
-
-<div class = col-md-8>
-Much of my experience teaching quantitative skills comes through a lecture/lab hybrid format, where students receive a common introduction to concepts before breaking out into groups or working individually through a lab assignment. While teaching in this format, I keep the following points in mind:
-<br>
-
-Multimodal presentation of content
-
-Interactive use of statistics programs
-Excel, R, Shinyapps
-
-Pacing
-
-1. **Equations**: they're a necessary part of any quantitative course, but they're also one of the most common places where students fall behind (even at a collegiate or graduate level). On the bright side, building competence with mathematical formulae can really broaden a student's ability to read scientific literature, and understand the structure of the statistical techniques they're using. I adopt the following techniques to improve student's comfort level with equations:
-
-+ *Text, graphical, and mathematical notation*: Every equation in my course material is accompanied by a detailed definition of every variable (even those that have been introduced before),  a plain-text explanation of how the equation functions, and a graphical demonstration of the equation when appropriate. For example, my course material includes the following description of an exponential growth model:
 
 $$N_{t+1} = N_{t} e^{r}$$
 
-$N_{t}$: Population size in year *t*
+**Variables:**
 
-$N_{t+1}$: Population size in the next year ($t+1$)
+- $N_{t}$: Population size in year *t*
 
-$e$: Mathematical constant referred to as Euler's number (pronounced 'oiler'). Approximatly equal to 2.71828.
+- $N_{t+1}$: Population size in the next year ($t+1$)
 
-$r$: Instantaneous population growth rate: the rate at which new individuals enter a population. When r = 0, no population growth occurs. If r > 0, the population is growing, and if r < 0, the population is shrinking.
+- $e$: Mathematical constant referred to as Euler's number (pronounced 'oiler'). Approximatly equal to 2.71828.
 
-The exponential growth model demonstrates how population growth accelerates when the number of individuals in the population increases. Let's use a fairly typical value of r (r = 0.1). At fairly small population sizes ($N_{t}=5$), the population would grow fairly slowly.
+- $r$: Instantaneous population growth rate: the rate at which new individuals enter a population. When r = 0, no population growth occurs. If r > 0, the population is growing, and if r < 0, the population is shrinking.
+
+**Definition:** The exponential growth model demonstrates how population growth accelerates when the number of individuals in the population increases. The more reproductively-active individuals you have within the population, the more new offspring you'll have each year.
+
+$r$ indicates how fast that population growth occurs: having lots of offspring or having a very low mortality rate could both lead to a high $r$.
+
+**Demonstration:** Let's use a typical value of $r$ ($r$ = 0.1). At fairly small population sizes ($N_{t}=5$), the population would grow slowly.
 
 $$N_{t}*e^{r}$$
 $$(5)*2.71828^{0.1} = 5.53$$
@@ -52,7 +55,10 @@ Here, the population increased by only 0.53 individuals. Let's see what happens 
 $$N_{t}*e^{r}$$
 $$(500)*2.71828^{0.1} = 553.59$$
 
-Here, the population increased by 53.59 individuals. Remember that $r$ = *birth rate - death rate*: we had 10x more starting individuals in this case, and so we had 10x more reproductive output. Here's a graphical illustration of how a population which starts small might experience exponential growth.
+Here, the population increased by 53.59 individuals. Increasing our starting population size by a factor of 10x increased the number of new individuals per year by the same factor. Here's a graphical illustration of how this accelerating growth can compound over time, and drive populations to incredible sizes.
+
+
+<center>
 
 ```{r echo=FALSE, fig.height=5, fig.width=5, message=FALSE}
 library(tidyverse)
@@ -84,69 +90,20 @@ example_tbl %>%
   annotate("errorbar", x = 53, ymin = 100.427482, ymax = 671.446685, width = 2, color = "darkred")
 ```
 
-
-+ *Excel*: While I tend to shy away from Excel when working on research, I've found it to be an incredibly useful tool for teaching statistics.
-
-<br>
-During this project we’ve developed a process for classifying GPS data collected during bird migration, which uses a modified step-length threshold with a hidden Markov model to estimate the migratory state of a woodcock at any point of its full annual cycle. As this technique can be used to estimate the migratory state of a bird during a mortality event, we’ll be able to integrate these classifications into an upcoming paper which examines woodcock survival in respect to migration. We’ve also used woodcock as a model for understanding how functional responses impact the habitat use of migratory birds throughout the year, and as an example of a low-altitude flier when examining how airspace obstacles overlap with migratory flight altitudes.
-
-
-</div>
-</div>
-<hr />
-## Conservation of at-risk species
-<br>
-<div class = row>
-<div class = col-md-8>
-Lesser prairie-chickens have recently been listed under the U.S. Endangered Species Act due to widespread declines throughout most of their range. To combat these declines, a collaborative federal, state, and university effort translocated 411 lesser prairie-chickens to unoccupied areas of presumed habitat in the Sand Sagebrush Prairie Ecoregion. During the translocation, we conducted an assessment of lesser prairie-chicken habitat requirements in areas where birds were released (especially the [Cimarron](https://www.fs.usda.gov/recarea/psicc/recarea/?recid=12404) and [Comanche](https://www.fs.usda.gov/detail/psicc/about-forest/districts/?cid=fsm9_032695) National Grasslands) and found that areas of Sand Sagebrush prairie which had formerly hosted lesser prairie-chickens no longer contained sufficient nesting habitat for their persistence.
-<br>
-<br>
-We also found that lesser prairie-chicken dispersal after translocation was almost universal, and resulted in the diffusion of the translocated population across an area totalling nearly 4,000 square kilometers (~1.25x the size of Rhode Island). Our paper describing this dispersal, published in Ecology and Evolution in 2024, advises that practitioners carefully evaluate the role of translocation before they use it for the restoration of this iconic prairie species.
-<br>
-<br>
-
-*Publications:*
-
-**Berigan, L. A.**, C. S. Aulicky, E. C. Teige, D. S. Sullins,  K. A. Fricke, J. H. Reitz, ... and D. A. Haukos (2024). Lesser prairie-chicken dispersal after translocation: Implications for restoration and population connectivity. Ecology and Evolution 14(2):e10871. [PDF](files/Berigan_LPCDispersal_2024.pdf)
-
-Teige, E. C., **L. A. Berigan**, C. S. Aulicky, J. H. Reitz, D. A. Haukos, D. S. Sullins, ... and L. G. Rossi. Assessment of lesser prairie‐chicken translocation through survival and lek surveys. Wildlife Society Bulletin 47(4):e1493. [PDF](files/Teige_survival_2023.pdf)
-
-**Berigan, L. A.**, C. S. Aulicky, E. C. Teige, D. S. Sullins, D. A. Haukos, K. A. Fricke, ... and A. M. Ricketts (2022). Availability of lesser prairie‐chicken nesting habitat impairs restoration success. Wildlife Society Bulletin 46(5):e1379. [PDF](files/Berigan_LPCHabitat_2022.pdf)
-
-**Berigan, L. A.** (2019). Dispersal, reproductive success, and habitat use by translocated lesser prairie-chickens. Master's thesis, Kansas State University. [PDF](files/Berigan_MastersThesis.pdf)
-
-*Use in listing decisions:* [Federal Register 87(226), page 72739](files/Federal_Register_2022_listing.pdf)
-
-*Media:* <a href="https://www.cbsnews.com/colorado/news/lesser-prairie-chickens-kansas-colorado-grasslands/" target="_blank">CBS News</a>, <a href="https://www.denverpost.com/2022/12/08/prairie-chicken-endangered-rescue-colorado/" target="_blank">Denver Post</a>, <a href="https://boulderweekly.com/news/midnight-on-the-prairie/" target="_blank">Boulder Weekly</a>, <a href="https://coloradooutdoorsmag.com/2020/07/27/conservation-update-lesser-prairie-chickens/" target="_blank">Colorado Outdoors Magazine</a>, <a href="https://northfortynews.com/category/news/four-year-project-sees-hundreds-of-lesser-prairie-chickens-reintroduced/" target="_blank">North Forty News</a>
-</div>
-<div class = col-md-4>
-<center>
-![<br><font size = "2" color = "grey">*Lesser prairie-chicken tagged with a VHF transmitter in preparation for translocation*</font>](images/lpc_circle.png)
 </center>
+
 </div>
-</div>
-<hr />
-## Urban bird declines 
+
 <br>
-<div class = row>
-<div class = col-md-4>
+
+2. **Interactive use of statistics programs:** I like to teach quantitative skills using a mix of two common statistics programs: Microsoft Excel and R. Excel has the benefit of familiarity, as most students have some experience with the program from high school or introductory college classes. It also allows for implementation of simple population models using notation that looks quite similar to the mathematical formulas in the book. R uses notation that looks less familiar, but allows for the implementation of more powerful models later on in the course. Asking students to complete a task in Excel, and then later to complete the same task in R, can reinforce basic concepts and provide a gentle introduction to statistical programming.
+
+<br>
+
 <center>
-![<br><font size = "2" color = "grey">*Artwork by Jen Lobo, frontispiece for the Wilson Journal of Ornithology (Issue 132)*</font>](images/HOSP_JenLobo.png)
+![<br><font size = "2" color = "grey">*Formula for exponential population growth, implemented using both Microsoft Excel and R. Teaching using both programs can reinforce basic concepts, and provide a good framework for an introduction to programming in R. *</font>](teaching_examples/excel_r_screenshot.png)
 </center>
-</div>
-<div class = col-md-8>
-[Nearly 3 billion birds](https://www.birds.cornell.edu/home/bring-birds-back/) have disappeared from North America since 1970, in large part due to massive declines in abundance among common bird species. Our team used citizen science data collected by [Project Feederwatch](https://feederwatch.org/) to measure trends in House Sparrow abundance and evaluate potential reasons for their disappearance. We found that House Sparrow declines were closely linked to highly-urbanized landscapes, and did not appear to be related to the resurgence in *Accipiter* hawk populations that contributed to declines in Europe. The cause of House Sparrow declines in North America is likely tightly linked to urban landscapes, and may include the modification of urban greenspaces or feral cat populations. Our results were published in the Wilson Journal of Ornithology in 2020.
-<br>
+
 <br>
 
-*Publication:*
-
-**Berigan, L. A.**, E. I. Greig, and D. N. Bonter (2020). Urban House Sparrow (*Passer domesticus*) populations decline in North America. The Wilson Journal of Ornithology 132(2):248-258. [PDF](files/Berigan_HouseSparrow_2020.pdf)
-
-*Media:* [ScienceDaily](https://www.sciencedaily.com/releases/2021/02/210211114002.htm), [New York Almanac](https://www.newyorkalmanack.com/2021/02/even-the-common-house-sparrow-is-in-decline-study-finds/), [Grand Forks Herald](https://www.grandforksherald.com/sports/northland-outdoors/always-in-season-mike-jacobs-house-sparrow-numbers-continue-long-term-decline)
-</div>
-</div>
-
-
-
-
+3. **Pacing:** Everyone digests class material at a different pace, and some folks require more assistance than others. I'm especially conscious about the preconceptions that many students have about their ability to succeed in math courses, which can cause them to give up quickly if they do not receive assistance ([Yates 2009](https://files.eric.ed.gov/fulltext/EJ883874.pdf), [Whitten 2018](https://researchcommons.waikato.ac.nz/server/api/core/bitstreams/c3388c55-f514-4b3a-a8a7-c12f7bc249bf/content)). Lab formats allow students the flexibility to proceed at their own pace, and give me flexibility as an instructor to spend additional time with the students who need it most. In addition to office hours, I'll often set individual meetings with students who I notice are falling behind to ensure that they have the assistance and encouragement they need to catch up.
