--- a/index.Rmd
+++ b/index.Rmd
@@ -5,7 +5,7 @@ output:
 ---
 <br>
 <div class = row>
-<div class = col-md-4>
+<div class = "col-md-4 col-sm-4 col-xs-4">
 ```{r, echo=FALSE, fig.show='hold', fig.align='center'}
 knitr::include_graphics("images/headshot_CO_circle.png")
 ```
