Fixing title bug

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,10 @@
 ---
+title: "Liam A. Berigan"
 output:
   html_document
 ---
+<style> h1.title {display: none;}</style>
+
 <br>
 <div class = row>
 <div class = "col-md-4 col-sm-4 col-xs-4">
