--- a/index.Rmd
+++ b/index.Rmd
@@ -23,7 +23,27 @@ My CV is available [here](files/Liam_Berigan_CV.pdf), and I can be contacted via
 </div>
 
 <hr />
-<center>
-![<font size = "2" color = "grey">*Woodcock tagged in Vermont disperse throughout the southeast during their fall migration*</font>](images/VT_migration_animation.gif)
 
+<div class = "col-md-6">
+<div class = row>
+<center>
+![<font size = "2" color = "grey">*Deploying satellite transmitters in collaboration with Vermont Fish and Wildlife, Audubon Vermont, and The Nature Conservancy*</font>](images/VT_collaborators.jpg){width=85%}
 </center>
+</div>
+</div>
+<div class = "col-md-6">
+<div class = "row-md-6">
+<center>
+![<font size = "2" color = "grey">*Woodcock about to be tagged with a satellite transmitter in Nova Scotia*</font>](images/chipped_nail_polish.jpg){width=72.5%}
+</center>
+</div>
+<div class = "row-md-6">
+<br>
+<center>
+![<font size = "2" color = "grey">*Woodcock tagged throughout the US and Canada migrate north in Spring 2020*</font>](images/migration_spring_2020.gif)
+</center>
+</div>
+</div>
+
+<br>
+
