--- a/index.Rmd
+++ b/index.Rmd
@@ -15,7 +15,7 @@ knitr::include_graphics("images/headshot_CO_circle.png")
 <div class = col-md-8>
 I am currently a postdoctoral researcher at [Kansas State University](https://www.k-state.edu) in the [Kansas Cooperative Fish and Wildlife Research Unit](https://www.k-state.edu/kscfwru/). My work focuses on the movements, habitat use, and population dynamics of wildlife, especially bird species. I have particular interests in migration and conservation of at-risk species through techniques such as translocation.
 
-I am also passionate about effective communication of results and scientific recommendations to wildlife agencies and the public. Some of my recent work has used [Shiny](https://www.shinyapps.io/) applications as an interactive platform to allow stakeholders to access data and results. I've included a gallery of those applications [here](applications.html).
+Starting this August, I'll be joining [Auburn University](https://www.auburn.edu) as an Assistant Professor of Quantitative Ecology. Much of my research will focus on the wintering ecology of birds, especially those reliant on grasslands or fire-dependent ecosystems. I'll also provide statistical consulting within the College of Forestry, Wildlife, and Environment, and teach WILD 5750 starting in Spring 2026.
 
 My CV is available [here](files/Liam_Berigan_CV.pdf), and I can be contacted via email <a href="mailto: liamaberigan@gmail.com" target="_blank">here</a>.
 
