--- a/index.Rmd
+++ b/index.Rmd
@@ -13,11 +13,11 @@ knitr::include_graphics("images/headshot_CO_circle.png")
 ```
 </div>
 <div class = col-md-8>
-I am currently a postdoctoral researcher at [Kansas State University](https://www.k-state.edu) in the [Kansas Cooperative Fish and Wildlife Research Unit](https://www.k-state.edu/kscfwru/). My work focuses on the movements, habitat use, and population dynamics of wildlife, especially bird species. I have particular interests in migration and conservation of at-risk species through techniques such as translocation.
+I am an Assistant Professor of Quantitative Ecology at [Auburn University](https://www.auburn.edu), where I study the movements, habitat use, and population dynamics of wildlife. I am particularly interested in the wintering ecology of birds, especially those reliant on grasslands or fire-dependent ecosystems. Some of my past work includes [monitoring lesser prairie-chicken translocations](files/Berigan_LPCDispersal_2024.pdf), [building interactive habitat conservation tools](https://woodcock.shinyapps.io/W-PAST), and [modeling woodcock flight altitudes](files/Berigan_flight_altitudes_2025.pdf).
 
-Starting this August, I'll be joining [Auburn University](https://www.auburn.edu) as an Assistant Professor of Quantitative Ecology. Much of my research will focus on the wintering ecology of birds, especially those reliant on grasslands or fire-dependent ecosystems. I'll also provide statistical consulting within the College of Forestry, Wildlife, and Environment, and teach WILD 5750 starting in Spring 2026.
+In addition to my research, I also provide statistical consulting within the College of Forestry, Wildlife, and Environment, and will teach WILD 5750 starting in Spring 2026.
 
-My CV is available [here](files/Liam_Berigan_CV.pdf), and I can be contacted via email <a href="mailto: liamaberigan@gmail.com" target="_blank">here</a>.
+My CV is available [here](files/Liam_Berigan_CV.pdf), and I can be contacted via email <a href="mailto: lib0016@auburn.edu" target="_blank">here</a>.
 
 </div>
 </div>
