--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -7,15 +7,20 @@ output:
       collapsed: true
       smooth_scroll: true
 ---
-<hr />
 
-## Teaching at Auburn
+<hr />
 
 I specialize in teaching quantitative methods and statistics from an ecological perspective, including topics such as regression, population dynamics, and Bayesian statistics. I expect to begin teaching an undergraduate course in natural resources statistics (WILD 5750) in Spring 2026, with additional courses to follow.
 
 <hr />
 
-## Past courses
+## Consulting
+
+I offer informal statistical and quantitative consulting for graduate students and undergraduates working on honors thesis projects. Common topics include regression, ANOVA, machine learning, parallel computing, Shiny app development, and introductory Bayesian methods — though I'm happy to help with other areas as well. If you have any questions, feel free to stop by my office (Forestry Building, Room 2349) or send me an email.
+
+<hr />
+
+## Classes taught
 
 <div style="background-color: #F6F6F6; border-radius: 10px; padding: 20px;">
 
