Updated research page
Closes #5. Likely the last commit of the branch.

--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -20,7 +20,7 @@ I offer informal statistical and quantitative consulting for graduate students a
 
 <hr />
 
-## Classes taught
+## Past courses
 
 <div style="background-color: #F6F6F6; border-radius: 10px; padding: 20px;">
 
