Adding new research news

--- a/index.Rmd
+++ b/index.Rmd
@@ -19,6 +19,10 @@ In addition to my research, I also provide statistical consulting within the Col
 
 My CV is available [here](files/Liam_Berigan_CV.pdf), and I can be contacted via email <a href="mailto: lib0016@auburn.edu" target="_blank">here</a>.
 
+**Research news:**
+
+[Nov. 27, 2025: New $17.5-million initiative aims to restore Black Belt Prairie](https://www.al.com/news/montgomery/2025/11/new-175-million-initiative-aims-to-restore-alabama-black-belt-prairie-good-for-land-and-people.html)
+
 </div>
 </div>
 
